# python-project-83

./: README.md  database.sql  makefile  pyproject.toml
.github/workflows/: test.yml
page_analyzer/: __init__.py  app.py  db.py  site_repository.py  utils.py  validator.py
page_analyzer/templates/: head.html  header.html  index.html  layout.html  site.html  sites.html
page_analyzer/tests/: test_validator.py
