[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["korotkov_egor <korotkovegor10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
ruff = "^0.6.9"
gunicorn = "^23.0.0"
python-dotenv = "^1.0.1"
validators = "^0.34.0"
psycopg2-binary = "^2.9.10"
pytest = "^8.3.3"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 80
fix = true
